update the projects

--- a/About.html
+++ b/About.html
@@ -21,5 +21,10 @@ you should use the http protocol instead of the https.
 </p>
 
 <p>
+    the music recommend system is powered by flask and netease web api. you can
+    find the netease api <a href="https://github.com/smileboywtu/MusicRecommend">here</a>.
+</p>
+
+<p>
 I create the website sharing some interesting things and record my ordinary life.
 </p>
