--- a/Projects.html
+++ b/Projects.html
@@ -4,6 +4,13 @@ title: Projects
 permalink: /Projects/
 ---
 
+<h3><a href="https://github.com/smileboywtu/MusicRecommend">Music Recommend </a></h3>
+<p class="well">
+recommend music using the netwase web api. user can login and get recommend music every day.
+</p>
+
+<hr>
+
 <h3><a href="https://github.com/smileboywtu/LubyTransformCode">Luby Transform Code</a><h3>
 <p class="well">
 java and python library for the luby transform code, this lib can work with android and pc.this lib is developed under python3, java6, java8.
